# claude-switcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  macos-build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ClaudeTrayPopup.css  ClaudeTrayPopup.tsx
