[package]
name = "claude-switcher"
version = "0.1.0"
description = "Claude Code local account switcher"
authors = ["xiaojian"]
edition = "2021"
default-run = "claude-switcher"

[lib]
name = "claude_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
urlencoding = "2"
